--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,11 @@
     <string name="email_hint">email</string>
     <string name="male_hint">Male:</string>
     <string name="female_hint">Female:</string>
+    <string name="default_marker">Click on a marker</string>
+    <string name="default_marker_details">to see event details</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_person">PersonActivity</string>
 </resources>
